tests/snapshots/assets__check_file@unit-grid-header-footer.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/grid/header-footer.typ
---
#table(
  columns: 3,
  table.header(
    [Substance],
    [Subcritical °C],
    [Supercritical °C],
    repeat: true,
  ),

  [Hydrochloric Acid],
  [12.0],
  [92.1],

  [Sodium Myreth Sulfate],
  [16.6],
  [104],

  [Potassium Hydroxide],
  [24.7],
  [114.514],
)
