tests/snapshots/assets__check_file@unit-import.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/import.typ
---
#import "@preview/fletcher:0.4.0" as fletcher: (
  node,
  edge,
)
