tests/snapshots/assets__check_file@unit-import.typ-80.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/import.typ
snapshot_kind: text
---
#import "@preview/fletcher:0.4.0" as fletcher: node, edge
