tests/snapshots/assets__check_file@unit-markup-code-inside-content.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/code-inside-content.typ
snapshot_kind: text
---
#[#{
    let something = 0
  }\
]
