tests/snapshots/assets__check_file@unit-markup-code-inside-content.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/code-inside-content.typ
---
#[#{ let something = 0 }\ ]
